modified day 3 file

--- a/Day 3.ipynb
+++ b/Day 3.ipynb
@@ -573,9 +573,9 @@
     "if score<10 or score>90 :\n",
     "    print(f\" Your score is {score} , you go together like coke and mentos.\")\n",
     "elif score >= 40 and score <= 50:\n",
-    "    print(f\" Your score is {score} , you are alright together\")\n",
+    "    print(f\" Your score is: {score} , you are alright together\")\n",
     "else :\n",
-    "    print(f\" Your score is {score}\")\n"
+    "    print(f\" Your score is: {score}\")"
    ]
   },
   {
